# dh5-demos

./: .gitignore  API_METHOD_REFERENCE.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
dh5_api/: __init__.py  dh5_api.py
docs/: dh5.py
examples/: basic_usage.py  pymodbus_usage.py
tests/: __init__.py
utils/: fix_serial.py
